--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
   <meta name="description" content="Developer">
   <meta name="format-detection" content="telephone=no">
-  <title>Developer</title>
+  <title>demo_Developer</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/app.css">
   <link rel="stylesheet" href="/css/test.css">
